--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 <body>
     <main>
         <section id="login">
-            <div id="imagem">
-                
-            </div>
+            <div id="imagem"></div>
 
+            
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja Bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
